--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "CI= gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby clean && gatsby develop -p 3000",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
